[package]
name = "rust-warp-jwt-api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3", features = ["tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"